# nanoRL

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  train.py  train_dpo.py  verbal_reasoning_synthetic_pair_generation.ipynb
nanorl/algorithms/dpo/: config.py  data.py  evaluate.py  loss.py  model.py  train.py
nanorl/data/: dummy_preference.py
notebooks/: dpo_from_scratch.ipynb  verbal_reasoning_synthetic_pair_generation.ipynb
scripts/: train_dpo.py
src/nanorl/: __init__.py
src/nanorl/algorithms/dpo/: config.py  evaluate.py  generate.py  model.py  train.py
src/nanorl/utils/: seed.py
