[project]
name = "nanorl"
version = "0.1.0"
description = "Rewards and actors for smol models"
readme = "README.md"
authors = [
    { name = "ritwikraha", email = "ritwik.nsec@gmail.com" },
    { name = "ariG23498", email = "aritra.born2fly@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
